# Village-Defence

./: .gitlab-ci.yml  CMakeLists.txt  README-en.md  README.md  debug-fedora.sh  debug-ninja.bat  debug-ubuntu.sh  debug-vs.bat  debug.bat  debug.sh  release-vs.bat  release.bat
.github/workflows/: ci.yml
res/: map0.cfg
res/archive/: tmp.json
res/config/: archive.json  cfg2jsonMap.py  config.json  invader.cfg  invader.json  jsonMap2txt.py  map.cfg  map.txt  map0.cfg  map0.json  map1.cfg  map1.json  map2.json  map3.json  prop.cfg  save.json  store.cfg  store.json  tower.cfg  tower.json  txt2jsonMap.py
res/img/: transform.py
res/maps/: map0.cfg
src/: main.cpp
src/GUI/: BaseState.h  BgmManager.cpp  BgmManager.h  EventManager.cpp  EventManager.h  Game.cpp  Game.h  SharedContext.hpp  SoundManager.cpp  SoundManager.h  StateManager.cpp  StateManager.h  State_About.cpp  State_About.h  State_Confirm.cpp  State_Confirm.h  State_Game.cpp  State_Game.h  State_Intro.cpp  State_Intro.h  State_Levels.cpp  State_Levels.h  State_Load.cpp  State_Load.h  State_MainMenu.cpp  State_MainMenu.h  State_Paused.cpp  State_Paused.h  State_Save.cpp  State_Save.h  State_Setting.cpp  State_Setting.h  State_Settlement.cpp  State_Settlement.h  State_Store.cpp  State_Store.h  Textbox.cpp  Textbox.h  Window.cpp  Window.h
src/Utils/: Board.cpp  Board.h  Bullet.cpp  Bullet.h  Element.cpp  Element.h  EndPoint.cpp  EndPoint.h  Figure.cpp  Figure.h  Map.cpp  Map.h  Place.cpp  Place.h  StartPoint.cpp  StartPoint.h  Utils.hpp
src/Widgets/: Button.cpp  Button.h  Confirm.cpp  Confirm.h  Label.cpp  Label.h  Select.cpp  Select.h  Settlement.cpp  Settlement.h  TextBox.cpp  TextBox.h  Toast.cpp  Toast.h
